--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -587,7 +587,7 @@
         android:layout_marginTop="6dp"
         android:orientation="horizontal">
         <EditText
-            android:id="@+id/Fname"
+            android:id="@+id/Dataid"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="DATA ID"
