--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,7 +80,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:inputType="number"
-                android:text="Temperature 1"
+                android:hint="Temperature 1"
                 android:textSize="14dp"
                 android:textAlignment="center"
                 android:clickable="true"
@@ -94,7 +94,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:inputType="number"
-                android:text="Time 1"
+                android:hint="Time 1"
                 android:textSize="14dp"
                 android:textAlignment="center" />
         </LinearLayout>
@@ -111,7 +111,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:inputType="number"
-                android:text="Temperature 2"
+                android:hint="Temperature 2"
                 android:textSize="14dp"
                 android:textAlignment="center" />
 
@@ -119,7 +119,7 @@
                 android:id="@+id/Time2"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="Time 2"
+                android:hint="Time 2"
                 android:inputType="number"
                 android:textSize="14dp"
                 android:textAlignment="center"
@@ -136,7 +136,7 @@
                 android:id="@+id/Temp3"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="Temperature 3"
+                android:hint="Temperature 3"
                 android:textSize="14dp"
                 android:inputType="number"
                 android:textAlignment="center"
@@ -147,7 +147,7 @@
                 android:id="@+id/Time3"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="Time 3"
+                android:hint="Time 3"
                 android:textSize="14dp"
                 android:inputType="number"
                 android:textAlignment="center"
@@ -164,7 +164,7 @@
                 android:id="@+id/Ncyc"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="Number of cycles"
+                android:hint="Number of cycles"
                 android:textSize="14dp"
                 android:inputType="number"
                 android:textAlignment="center"
@@ -207,7 +207,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:inputType="number"
-                android:text="ISO"
+                android:hint="ISO"
                 android:textSize="14dp"
                 android:textAlignment="center" />
 
@@ -215,7 +215,7 @@
                 android:id="@+id/ExpTime"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="Exposure time"
+                android:hint="Exposure time"
                 android:textSize="14dp"
                 android:inputType="number"
                 android:textAlignment="center"
@@ -232,7 +232,7 @@
                 android:id="@+id/ShuTime"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="Shutter speed"
+                android:hint="Shutter speed"
                 android:textSize="14dp"
                 android:inputType="number"
                 android:textAlignment="center"
@@ -242,7 +242,7 @@
                 android:id="@+id/LivTime"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="Live time"
+                android:hint="Live time"
                 android:textSize="14dp"
                 android:inputType="number"
                 android:textAlignment="center"
@@ -258,7 +258,7 @@
                 android:id="@+id/Flu"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="Fluorescence"
+                android:hint="Fluorescence"
                 android:textSize="14dp"
                 android:inputType="text"
                 android:textAlignment="center"
@@ -300,7 +300,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:inputType="number"
-                android:text="Detection parameter 1"
+                android:hint="Detection parameter 1"
                 android:textSize="14dp"
                 android:textAlignment="center" />
 
@@ -308,7 +308,7 @@
                 android:id="@+id/Detparm2"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="Detection parameter 2"
+                android:hint="Detection parameter 2"
                 android:textSize="14dp"
                 android:inputType="number"
                 android:textAlignment="center"
@@ -325,7 +325,7 @@
                 android:id="@+id/Minrad"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="Minimum radius"
+                android:hint="Minimum radius"
                 android:textSize="14dp"
                 android:inputType="number"
                 android:textAlignment="center"
@@ -335,7 +335,7 @@
                 android:id="@+id/Maxrad"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="Maximum radius"
+                android:hint="Maximum radius"
                 android:textSize="14dp"
                 android:inputType="number"
                 android:textAlignment="center"
@@ -351,7 +351,7 @@
                 android:id="@+id/Mindist"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="Minimum distance"
+                android:hint="Minimum distance"
                 android:textSize="14dp"
                 android:inputType="number"
                 android:textAlignment="center"
@@ -594,7 +594,7 @@
                 android:id="@+id/Dataid"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="DATA ID"
+                android:hint="DATA ID"
                 android:textSize="14dp"
                 android:inputType="number"
                 android:textAlignment="center"
